--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+    
+    border-style: ridge;
+    padding: 20px;
+    border-color: chartreuse;
+    margin: 20px;
+    border-width: 3px;
+    border-radius: 10px;
+    height: 90vh;
 }
 .container{
   justify-content: center;
@@ -27,9 +35,19 @@
     border-radius: 40px;
 }
 select{
-  font-size: 20px;
-    /* margin: 10px; */
-    width: 100%;
+  width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+    background: darkseagreen;
+    color: honeydew;
+    font-size: 30px;
+}
+.selectwheel{
+  
+  width:20vw;
+  text-align: center;
+  margin: auto;
+  margin-top: 80px;
 }
 input{
   padding-top: 25px;
@@ -69,18 +87,20 @@ input{
   transform: translate(-50%, -50%) rotate(45deg); /* rotate the square 45 degrees */
   width: 0;
   height: 0;
-  border-width: 10px;
+  border-width: 30px;
   border-style: solid;
-  border-color: transparent transparent #000000f7 transparent; /* set the bottom border color to black */
+  border-color: transparent transparent #00000051 transparent; /* set the bottom border color to black */
   border-top-color: transparent; /* set top border to transparent */
   border-left-color: transparent; /* set left border to transparent */
   border-right-color: transparent; /* set right border to transparent */
 }
-.wheel-image{
+.wheel-image {
   margin-top: 20px;
-  width: 50vw;
-  height :(50vw * height) / width
-
+  width: 40vw;
+  height: calc(40vw * height / width);
+  margin-right: 100px;
+  overflow-x: hidden;
+  margin: auto;
 }
 @keyframes tickerflash {
   20% {
@@ -97,5 +117,19 @@ input{
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+
+@media only screen and (orientation: portrait) {
+  .container{
+    flex-direction: column;
+  }
+  .controls{
+    width: 80vw;
+  }
+  .wheel-image{
+    width: 80vw;
+    margin-right: 0;
   }
 }
